--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "dev": "concurrently \"npm run server\" \"npm run client\""
   },
   "dependencies": {
+    "axios": "^0.18.0",
+    "jwt-decode": "^2.2.0",
     "babel-polyfill": "^6.26.0",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
@@ -18,13 +20,20 @@
     "express-session": "^1.15.6",
     "http-errors": "~1.6.2",
     "morgan": "~1.9.0",
+    "mongodb": "^3.1.6",
     "node-mailjet": "^3.3.1",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-scripts": "3.0.1",
-    "react-router-dom": "^4.3.1"
+    "react-router-dom": "^4.3.1",
+    "bcrypt": "3.0.0",
+    "body-parser": "^1.17.2",
+    "cors": "^2.8.4",
+    "jsonwebtoken": "^7.4.2",
+    "mongoose": "^5.2.15",
+    "nodemon": "^1.18.3"
   },
   "repository": {
     "type": "git",
@@ -55,8 +64,6 @@
     "json-loader": "^0.5.4",
     "method-override": "^3.0.0",
     "mini-css-extract-plugin": "^0.5.0",
-    "mongoose": "^5.4.2",
-    "nodemon": "^1.18.9",
     "optimize-css-assets-webpack-plugin": "^5.0.1",
     "react-hot-loader": "^4.3.11",
     "style-loader": "^0.23.1",
