--- a/package.json
+++ b/package.json
@@ -11,29 +11,26 @@
     "dev": "concurrently \"npm run server\" \"npm run client\""
   },
   "dependencies": {
-    "axios": "^0.18.0",
-    "jwt-decode": "^2.2.0",
     "babel-polyfill": "^6.26.0",
-    "cookie-parser": "~1.4.3",
-    "debug": "~2.6.9",
-    "express": "~4.16.0",
-    "express-session": "^1.15.6",
-    "http-errors": "~1.6.2",
-    "morgan": "~1.9.0",
-    "mongodb": "^3.1.6",
-    "node-mailjet": "^3.3.1",
+    "react": "^16.7.0",
+    "react-dom": "^16.7.0",
+    "react-router-dom": "^5.0.1",
+    "react-scripts": "^3.0.1",
+    "axios": "^0.18.0",
+    "classnames": "^2.2.6",
+    "jwt-decode": "^2.2.0",
+    "react-redux": "^5.1.1",
+    "redux": "^4.0.1",
+    "bcryptjs": "^2.4.3",
+    "body-parser": "^1.18.3",
+    "express": "^4.16.4",
+    "is-empty": "^1.2.0",
+    "jsonwebtoken": "^8.3.0",
+    "mongoose": "^5.3.11",
     "passport": "^0.4.0",
-    "passport-local": "^1.0.0",
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6",
-    "react-scripts": "3.0.1",
-    "react-router-dom": "^4.3.1",
-    "bcrypt": "3.0.0",
-    "body-parser": "^1.17.2",
-    "cors": "^2.8.4",
-    "jsonwebtoken": "^7.4.2",
-    "mongoose": "^5.2.15",
-    "nodemon": "^1.18.3"
+    "passport-jwt": "^4.0.0",
+    "validator": "^10.9.0",
+    "redux-thunk": "^2.3.0"
   },
   "repository": {
     "type": "git",
@@ -45,7 +42,7 @@
     "url": "https://github.com/Rostyan/userShareTasks/issues"
   },
   "devDependencies": {
-    "@babel/core": "^7.4.5",
+    "@babel/core": "^7.2.2",
     "@babel/plugin-proposal-class-properties": "^7.4.4",
     "@babel/preset-env": "^7.2.3",
     "@babel/preset-react": "^7.0.0",
@@ -57,20 +54,19 @@
     "concurrently": "^4.0.0",
     "css-loader": "^1.0.1",
     "extract-text-webpack-plugin": "^3.0.2",
-    "file-loader": "^1.1.11",
-    "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
     "image-webpack-loader": "^4.6.0",
     "json-loader": "^0.5.4",
-    "method-override": "^3.0.0",
     "mini-css-extract-plugin": "^0.5.0",
+    "nodemon": "^1.18.9",
     "optimize-css-assets-webpack-plugin": "^5.0.1",
-    "react-hot-loader": "^4.3.11",
     "style-loader": "^0.23.1",
-    "url-loader": "^1.0.1",
     "webpack": "^4.33.0",
     "webpack-cli": "^3.3.4",
-    "webpack-dev-server": "^3.7.1"
+    "webpack-dev-middleware": "^3.7.0",
+    "webpack-dev-server": "^3.7.1",
+    "webpack-hot-middleware": "^2.24.0",
+    "webpack-node-externals": "^1.7.2"
   },
   "homepage": "https://github.com/Rostyan/userShareTasks#readme"
 }
